Fixing images on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -34,5 +34,5 @@ display: block;
 display: block;
 margin-left: auto;
 margin-right: auto;
-width: 50%;
+width: auto;
 }
